--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tcp-transfer-ice"
-version = "0.5.2"
+version = "0.5.3"
 edition = "2021"
 authors = ["TCP Transfer Team"]
 description = "TCP file transfer with NAT traversal (hole punching)"
@@ -19,6 +19,7 @@ serde_json = "1.0"
 
 # Cryptography (SHA256 for final verification)
 sha2 = "0.10"
+crc32fast = "1.4"
 
 # CLI
 clap = { version = "4.4", features = ["derive"] }
